--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 * {
     font-family: 'Poppins', sans-serif;
 }
+
 /* navbaar section style */
 
 .navbar-section {
@@ -88,6 +89,7 @@
     margin-top: 0;
     margin-bottom: 0;
 }
+
 .banner-btn {
     color: #FFF;
     font-size: 18px;
@@ -124,48 +126,26 @@
 
 
 
-
-
-
 /* funny-videos section style */
-.funny-img-content{
-    width: 200px;
+.funny-videos-content {
+    display: flex;
+    margin: 0 auto;
+    max-width: 1440px;
+    justify-content: center;
 }
-.funny-img-content
-img{
-    width: 100%;
-}
-.funny-videos-info {
+
+.funny-videos-title {
     text-align: center;
 }
 
-.funny-videos-img {
-    display: flex;
-    gap: 20px;
-}
-.funny-videos-content{
-    max-width: 1440px;
-    margin: 0 auto;
-}
-
-.funny-videos-img p {
-    color: #534C64;
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 30px;
-}
-
-/* .funny-img {
+.funny-img {
     width: 200px;
-} */
-
-
-
+}
 
 
 /* play game section style*/
 
-.play-game-description{
+.play-game-description {
     color: #534C64;
     font-weight: 400;
     line-height: 30px;
@@ -178,9 +158,8 @@ img{
     gap: 100px;
     align-items: center;
 }
-.play-game-info{
 
-}
+.play-game-info {}
 
 .game-img {
     position: relative;
@@ -201,13 +180,15 @@ img{
     width: 125px;
     height: 135px;
 }
+
 .funny-videos-info h2 {
     color: #0B0223;
     font-size: 20px;
     font-weight: 700;
     margin-bottom: 0;
 }
-.game-title{
+
+.game-title {
     color: #0B0223;
     font-size: 20px;
     font-weight: 700;
@@ -237,17 +218,30 @@ img{
 
 
 /* button section style */
-.btn-section {
+.btn-container {
     margin: 100px 60px;
-    display: grid;
+    /* display: grid;
     grid-template-columns: repeat(5, 1fr);
-    gap: 20px;
+    gap: 20px; */
+}
+
+.btn-content {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 10px;
+    justify-content: center;
+}
+
+.btn-content1 {
+    display: flex;
+    gap: 10px;
 }
 
 .btn {
-    /* border-radius: 50px; */
+    border-radius: 40px;
     background: #FFF;
     text-align: center;
+    gap: 10px;
 }
 
 
@@ -257,11 +251,64 @@ img{
 
 
 /* footer section style */
+.footer {
+    border: 1px solid tomato;
+    background-color: #0B0223;
+}
+
 .footer-title {
+    color: white;
     display: flex;
+    gap: 30px;
+    justify-content: center;
+}
+
+.footer-title p {
+    color: #FFF;
+    text-align: center;
+    font-weight: 600;
+}
+
+.logo-navbar-1{
+    justify-content: center;
+    color: white;
+    display: flex;
+    align-items: center;
+    margin: 0;
+    padding: 0%;
+    gap: 5px;
+}
+.G-style-1 {
+    color: #FF42A5;
+}
+
+
+.twitter {
+    width: 50px;
+    color: white;
+}
+
+.footer-title-1 {
+    color: white;
+    display: flex;
+    justify-content: center;
     gap: 30px;
 }
 
+.footer-title-1 p {
+    color: rgba(255, 255, 255, 0.60);
+    font-weight: 500;
+}
+
+.footer-copyright {
+    color: white;
+    text-align: center;
+}
+
+.footer-copyright p {
+    color: rgba(255, 255, 255, 0.60);
+    font-weight: 500;
+}
 
 
 
@@ -290,7 +337,11 @@ img{
         width: 300px;
 
     }
-    .play-game-secton{
+
+    .play-game-secton {
         flex-direction: column-reverse;
+    }
+    .footer{
+        flex-direction: column;
     }
 }
