--- a/style.css
+++ b/style.css
@@ -127,15 +127,18 @@
 
 
 /* funny-videos section style */
-.funny-videos-content {
-    display: flex;
-    margin: 0 auto;
-    max-width: 1440px;
-    justify-content: center;
+.funny-video-section {
+    width: 80%;
+    margin-left: 70px;
 }
 
 .funny-videos-title {
     text-align: center;
+}
+
+.funny-videos-content {
+    display: flex;
+    gap: 20px;
 }
 
 .funny-img {
@@ -219,10 +222,40 @@
 
 /* button section style */
 .btn-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 50px;
+    padding: 20px;
+    gap: 10px;
+    justify-content: space-around;
+    background-color: #c7137f1a;
+}
+
+.btn {
+    display: flex;
+    cursor: pointer;
+    padding: 10px 10px;
+    background-color: #ffff;
+    border-radius: 50px;
+    
+}
+div img{
+    width: 37px;
+    height: auto;
+    margin-right: 12px;
+}
+/* div p{
+    color: #0b0223;
+    font-size: 13px;
+    font-weight: 600;
+} */
+
+
+/* .btn-container {
     margin: 100px 60px;
     /* display: grid;
     grid-template-columns: repeat(5, 1fr);
-    gap: 20px; */
+    gap: 20px;
 }
 
 .btn-content {
@@ -242,7 +275,7 @@
     background: #FFF;
     text-align: center;
     gap: 10px;
-}
+} */
 
 
 
@@ -269,7 +302,7 @@
     font-weight: 600;
 }
 
-.logo-navbar-1{
+.logo-navbar-1 {
     justify-content: center;
     color: white;
     display: flex;
@@ -278,6 +311,7 @@
     padding: 0%;
     gap: 5px;
 }
+
 .G-style-1 {
     color: #FF42A5;
 }
@@ -310,6 +344,19 @@
     font-weight: 500;
 }
 
+.footer-icon {
+    text-align: center;
+    gap: 10px;
+}
+
+.fa-brands {
+    font-size: 30px;
+    margin-right: 20px;
+}
+
+
+
+
 
 
 
@@ -341,7 +388,8 @@
     .play-game-secton {
         flex-direction: column-reverse;
     }
-    .footer{
+
+    .footer {
         flex-direction: column;
     }
 }
