cheak navbar icon

--- a/style.css
+++ b/style.css
@@ -41,9 +41,9 @@
     gap: 10px;
     align-items: center;
 }
-.youtube-icon{
+/* .youtube-icon{
     display: flex;
-}
+} */
 
 .fa-brands.y-icon {
     font-size: 25px;
