--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
     list-style: none;
 }
 
-.y-icon li {
+.youtube-tiktok-icon li {
     display: flex;
     border-radius: 5px;
     background: rgba(11, 2, 35, 0.10);
@@ -41,9 +41,6 @@
     gap: 10px;
     align-items: center;
 }
-/* .youtube-icon{
-    display: flex;
-} */
 
 .fa-brands.y-icon {
     font-size: 25px;
