--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-/* shared syles */
+/* SHARED STYLE */
 * {
     font-family: 'Poppins', sans-serif;
 }
 
-/* navbaar section style */
+/* NAVBAR SECTION STYLE STARTED */
 
 .navbar-section {
     display: flex;
@@ -11,7 +11,6 @@
     align-items: center;
     margin: 0 50px;
 }
-
 .logo-navbar {
     display: flex;
     align-items: center;
@@ -19,20 +18,16 @@
     padding: 0%;
     gap: 5px;
 }
-
 .logo-navbar h4 {
     font-size: 25px;
 }
-
 .logo-img {
     width: 50.041px;
     height: 25px;
 }
-
 .btn-navbar li {
     list-style: none;
 }
-
 .youtube-tiktok-icon li {
     display: flex;
     border-radius: 5px;
@@ -41,7 +36,6 @@
     gap: 10px;
     align-items: center;
 }
-
 .fa-brands.y-icon {
     font-size: 25px;
     color: #F61C0D;
@@ -49,30 +43,27 @@
 .fa-brands.t-icon{
     font-size: 25px;
 }
-
 .btn-navbar ul {
     display: flex;
     gap: 32px;
     align-items: center;
-
 }
-
 .btn-navbar a {
     text-decoration: none;
     color: #3C354F;
     font-weight: 500;
-
 }
-
 .G-style {
     color: #FF42A5;
 }
+/* NAVBAR SECTION STYLE FINISHED */
 
 
 
 
 
-/* banner section style */
+
+/* BANNER SECTION STYLE STARTED */
 .banner-container {
     display: flex;
     justify-content: space-between;
@@ -80,7 +71,6 @@
     gap: 40px;
     align-items: center;
 }
-
 .banner-info {
     width: 100%;
     background-image: url('./images/Group\ 14.png');
@@ -89,7 +79,6 @@
     text-align: center;
     padding: 0 0 50px;
 }
-
 .banner-text {
     color: #0B0223;
     font-size: 30px;
@@ -97,7 +86,6 @@
     text-transform: uppercase;
     margin-bottom: 0;
 }
-
 .banner-title {
     background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
     background-clip: text;
@@ -109,7 +97,6 @@
     margin-top: 0;
     margin-bottom: 0;
 }
-
 .banner-btn {
     color: #FFF;
     font-size: 18px;
@@ -121,7 +108,6 @@
     border: none;
     margin-right: 5px;
 }
-
 .banner-btn1 {
     color: #FFF;
     font-size: 18px;
@@ -132,41 +118,43 @@
     padding: 10px 25px;
     border: none;
 }
-
 .banner-img img {
     width: 400px;
-
 }
-
 .primary-description {
     color: #534C64;
     font-weight: 100;
     margin-top: 0;
 }
+/* BANNER SECTION STYLE FINISHED */
 
 
 
-/* funny-videos section style */
+
+
+/* FUNNY VIDEOS SECTION STYLE STARTED*/
 .funny-video-section {
-    width: 80%;
-    margin-left: 70px;
+    border: 1px solid tomato;
+    width: 90%;
+    /* margin-left: 60px; */
+    margin: 0 auto;
 }
-
 .funny-videos-title {
     text-align: center;
 }
-
 .funny-videos-content {
     display: flex;
-    gap: 20px;
+    gap: 18px;
 }
-
 .funny-img {
     width: 200px;
 }
+/* FUNNY VIDEOS SECTION STYLE FINISHED*/
 
 
-/* play game section style*/
+
+
+/* PLAY GAME SECTION STYLE STARTED */
 
 .play-game-description {
     color: #534C64;
@@ -174,50 +162,40 @@
     line-height: 30px;
     margin-top: 5px;
 }
-
 .play-game-secton {
     display: flex;
     margin: 20px 50px;
     gap: 100px;
     align-items: center;
 }
-
-.play-game-info {}
-
 .game-img {
     position: relative;
 }
-
 .game-img img {
     width: 300px;
     height: 300px;
 }
-
 .game-img1 {
     position: absolute;
     top: 210px;
     left: 220px;
 }
-
 .game-img1 img {
     width: 125px;
     height: 135px;
 }
-
 .funny-videos-info h2 {
     color: #0B0223;
     font-size: 20px;
     font-weight: 700;
     margin-bottom: 0;
 }
-
 .game-title {
     color: #0B0223;
     font-size: 20px;
     font-weight: 700;
     margin-bottom: 0;
 }
-
 .funny-videos-description {
     color: #534C64;
     text-align: center;
@@ -225,7 +203,6 @@
     line-height: 30px;
     margin-top: 0;
 }
-
 .funny-title {
     background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
     background-clip: text;
@@ -234,13 +211,12 @@
     font-size: 20px;
     font-weight: 700;
 }
+/* PLAY GAME SECTION STYLE FINISHED */
 
 
 
 
-
-
-/* button section style */
+/* BUTTON SECTION STYLE STARTED*/
 .btn-container {
     display: flex;
     flex-wrap: wrap;
@@ -250,7 +226,6 @@
     justify-content: space-around;
     background-color: #c7137f1a;
 }
-
 .btn {
     display: flex;
     cursor: pointer;
@@ -259,39 +234,32 @@
     border-radius: 50px;
 
 }
-
 div img {
     width: 37px;
     height: auto;
     margin-right: 12px;
 }
+/* BUTTON SECTION STYLE FINISHED*/
 
 
 
 
-
-
-
-
-/* footer section style */
+/* FOOTER SECTION STYLE STARTED*/
 .footer {
     border: 1px solid tomato;
     background-color: #0B0223;
 }
-
 .footer-title {
     color: white;
     display: flex;
     gap: 30px;
     justify-content: center;
 }
-
 .footer-title p {
     color: #FFF;
     text-align: center;
     font-weight: 600;
 }
-
 .logo-navbar-1 {
     justify-content: center;
     color: white;
@@ -301,48 +269,40 @@ div img {
     padding: 0%;
     gap: 5px;
 }
-
 .G-style-1 {
     color: #FF42A5;
 }
-
-
 .twitter {
     width: 50px;
     color: white;
 }
-
 .footer-title-1 {
     color: white;
     display: flex;
     justify-content: center;
     gap: 30px;
 }
-
 .footer-title-1 p {
     color: rgba(255, 255, 255, 0.60);
     font-weight: 500;
 }
-
 .footer-copyright {
     color: white;
     text-align: center;
 }
-
 .footer-copyright p {
     color: rgba(255, 255, 255, 0.60);
     font-weight: 500;
 }
-
 .footer-icon {
     text-align: center;
     gap: 10px;
 }
-
 .fa-brands {
     font-size: 30px;
     margin-right: 20px;
 }
+/* FOOTER SECTION STYLE FINISHED*/
 
 
 
@@ -352,7 +312,7 @@ div img {
 
 
 
-/* mobile responsive view */
+/* MOBILE RESPONSIVE VIEW*/
 @media screen and (max-width:576px) {
     .navbar-section {
         flex-direction: column;
@@ -380,6 +340,9 @@ div img {
     }
 
     .footer {
+        flex-direction: column;
+    }
+    .funny-videos-content{
         flex-direction: column;
     }
 }
